# CppTemplate

./: .gitignore  CMakeLists.txt  README.md  change-remote.bat  change-remote.py  change-remote.sh  main.cpp
include/: Calculator.h  Observer.hpp  Publisher.hpp
src/: Calculator.cpp
